[LurkBot] Enhance healthcheck printing